[gd_scene load_steps=9 format=3 uid="uid://ccjgv0ecp7bvw"]

[ext_resource type="Script" path="res://Data/Scroller/ScrollerPicPlate.gd" id="1_g0owk"]
[ext_resource type="Shader" path="res://Data/Scroller/ScrollerSolidPicPlate.gdshader" id="2_u7n43"]
[ext_resource type="Shader" path="res://Data/Scroller/ScrollerPicPlate.gdshader" id="3_32ao4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u32pg"]
render_priority = 0
shader = ExtResource("2_u7n43")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/frameWidth = Vector2(0.018, 0.032)
shader_parameter/albedoTextures = Array[Texture2D]([])

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x7y62"]
render_priority = 0
shader = ExtResource("3_32ao4")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/randomSeed = 0.0
shader_parameter/displacementXCenterPoint = 0.0
shader_parameter/maxEndAngle = 6.0
shader_parameter/autoFragmentScalingStartFraction = 0.0
shader_parameter/autoFragmentScalingEndFraction = 1.0
shader_parameter/displacementMinDeviation_Appear = Vector3(-0.5, -1, 0.1)
shader_parameter/displacementMaxDeviation_Appear = Vector3(0.5, -0.5, 1)
shader_parameter/displacementMinDeviation_Disappear = Vector3(-0.5, 0.5, 0.1)
shader_parameter/displacementMaxDeviation_Disappear = Vector3(0.5, 1, 1)
shader_parameter/displacementXMultiplier_Appear = 0.5
shader_parameter/displacementXMultiplier_Disappear = 0.5
shader_parameter/disintegrationMinY_Appear = -1.5
shader_parameter/disintegrationMaxY_Appear = -0.5
shader_parameter/disintegrationMinY_Disappear = 0.5
shader_parameter/disintegrationMaxY_Disappear = 1.5
shader_parameter/frameWidth = Vector2(0.018, 0.032)
shader_parameter/albedoTextures = Array[Texture2D]([])

[sub_resource type="Animation" id="Animation_ga7re"]
resource_name = "Dummy"

[sub_resource type="Animation" id="Animation_0rcvh"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:trigStashToolData")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_koekf"]
_data = {
"Dummy": SubResource("Animation_ga7re"),
"RESET": SubResource("Animation_0rcvh")
}

[node name="ScrollerPicPlate" type="Node3D"]
script = ExtResource("1_g0owk")
maxEdgeLength = 0.05
randomSeed = 15
disintegrationMethod = 1
depth = 0.5

[node name="SolidMesh" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("ShaderMaterial_u32pg")
instance_shader_parameters/basePosY = 0.0
instance_shader_parameters/preXShift = 0.0
instance_shader_parameters/textureIndex = 0

[node name="DisintegratedMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_x7y62")
instance_shader_parameters/basePosY = 0.0
instance_shader_parameters/preXShift = 0.0
instance_shader_parameters/textureIndex = 0

[node name="AnimationPlayer_ToolDataStasher" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_koekf")
}
